modification in dashboard

--- a/src/app/add-child/add-child.component.html
+++ b/src/app/add-child/add-child.component.html
@@ -1,4 +1,5 @@
 
+
 <app-header></app-header>
 <!-- <app-side-nav></app-side-nav> -->
 <div class="container-fluid page">
@@ -8,11 +9,11 @@
       <div class="page__content-data position-relative text-left">
         <div class="col">
 
-<!-- <button mat-raised-button color="accent" (click)="openP_UDailog()" >User-Profile</button> -->
-
-<!-- <button mat-raised-button color="accent" (click)="openP_CDailog()" >Add Child</button> -->
+<!-- <button mat-raised-button color="accent" (click)="openadd_childDailog()" >User-Profile</button> -->
+<!-- 
+<button mat-raised-button color="accent" (click)="openP_CDailog()" >Add Child</button>
 <button mat-raised-button color="accent" (click)="openViewChildDailog()" >View Child</button>
-<button mat-raised-button color="accent" (click)="openViewTransactionDailog()" >View Transactions</button>
+<button mat-raised-button color="accent" (click)="openViewTransactionDailog()" >View Transactions</button> -->
 
         </div>
        
