--- a/src/app/add-child/add-child.component.css
+++ b/src/app/add-child/add-child.component.css
@@ -81,4 +81,23 @@
   button{
     margin-left: 1rem;
   }
+
+  mat-form-field{
+    width: 100%;
+    }
+    span{
+      padding: 10px;
+    }
+    
+    .example-radio-group {
+      display: flex;
+      flex-direction: column;
+      margin: 15px 0;
+      align-items: flex-start;
+    }
+    
+    .example-radio-button {
+      margin: 5px;
+    }
+    
   
