--- a/src/app/my-dashboard/my-dashboard.component.html
+++ b/src/app/my-dashboard/my-dashboard.component.html
@@ -6,7 +6,7 @@
         <div class="col sm-8">
           <h1>Welcome to Secure</h1>
         </div>
-        <img class="dashboard_pic" src="../../assets/welcome.png" style="width: 50;" >
+        <!-- <img class="dashboard_pic" src="../../assets/welcome.png" style="width: 50;" > -->
       </div>
     </div>
   </div>
