--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -4,10 +4,17 @@
     <img class="pic" src="../../assets/secure_pic.gif" alt="pic">
     </div>
     <mat-divider></mat-divider>
+
+    <div class="row">
+
+        <button mat-button  routerLink="/dashboard" (click)="openparent_profileDailog()">Profile</button>
+        <button mat-button  routerLink="/dashboard" (click)="openchild_detailsDailog()">Add Child </button>
+        <!-- <button mat-button  routerLink="/contact">Contact</button> -->
+      </div>
     <!-- <h2 matSubheader class="mt-2">Application </h2> -->
-    <a mat-list-item routerLink="/parent" routerLinkActive="list-item-active"><mat-icon>supervisor_account</mat-icon> Parent</a>
+    <!-- <a mat-list-item routerLink="/parent" routerLinkActive="list-item-active"><mat-icon>supervisor_account</mat-icon> Parent</a>
     <a mat-list-item routerLink="/child" routerLinkActive="list-item-active"><mat-icon>supervisor_account</mat-icon> Child</a>
-    <a mat-list-item routerLink="/contact" routerLinkActive="list-item-active"><mat-icon>dashboard</mat-icon> link</a>
+    <a mat-list-item routerLink="/contact" routerLinkActive="list-item-active"><mat-icon>dashboard</mat-icon> link</a> -->
     <!-- <a mat-list-item routerLink="#"><mat-icon>edit</mat-icon> Link1</a>
     <a mat-list-item routerLink="#"><mat-icon>edit</mat-icon> Link2</a>
     <a mat-list-item routerLink="#"><mat-icon>edit</mat-icon> Link3</a>
